# Kree-v1

./: .gitignore  .temp.json  BROWSER_AGENT_IMPLEMENTATION_PLAN.md  Kree AI.spec  LICENSE  README-INSTALL.txt  audit_report.md  build_kree.bat  copy_ui.py  kree_installer.iss  main.py  main.py.backup  mobile_bridge.py  push_to_github.py  pyproject.toml  readme.md  requirements.txt  scratch_generate_chimes.py  setup.py  test_git.py  test_git_output.py  test_push.py  test_wakeword.py  ui.py  version_info.txt
actions/: cmd_control.py  code_helper.py  computer_settings.py  desktop.py  downloader_updater.py  email_calendar.py  open_app.py  openapps_automation.py  screen_processor.py
agent/: executor.py  planner.py
config/: api_keys.json  audio_settings.json  kree_memory.json  picovoice.json  pwa_token.json  service_keys.json  update_state.json  user_auth.json  user_profile.json
core/: analytics.py  api_setup_ui.py  auth_store.py  auth_ui.py  automations_config.json  backend.py  biometrics.py  hardware_profile.py  llm_gateway.py  prompt.txt  security_ui.py  telemetry.py  turboquant_helper.py  user_profile.json  vault.py  version.py  wakeword.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  README.md  ROADMAP.md
installer/: build_installer.bat  kree_setup.iss
kree/: __init__.py  _paths.py  main_entry.py  mobile_bridge.py  serve_pwa.py  ui.py
memory/: config_manager.py  history_manager.py  kree_memory.json  memory_manager.py
pwa/: app.js  index.html  manifest.json  style.css  sw.js
scripts/: _copy_assets.py  _make_ico.py  build_release.py  download_stitch.py  patch.py  push_to_github.py  test_wakeword.py  update_base_dirs.py  update_imports.py
tests/: __init__.py  conftest.py
ui_scripts/: build_ui.py  lock.html  (+1 more)
(+85 files in other folders)
